--- a/prueba.html
+++ b/prueba.html
@@ -4,6 +4,9 @@
 		<title>Nuevos Estilos CSS3</title>
 		<link rel="stylesheet" href="css/nuevocss3.css">
 	</head>
+
+
+	<-- prueba --!>
 	<body>
 		<header id="principal">
 			<span id="titulo">Estilos CSS Web 2.0</span>
