--- a/cargar.html
+++ b/cargar.html
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
-
-	<meta charset="utf-8"/>
-	<title>Loquesea.com</title>
-	<link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Loquesea.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
 <body>
-	<div id="agrupar">
-		<header id="cabecera">
-			Loquesea.com		
-		</header>
-		<nav id="menu">
-			<ul>
-
-				<li><A href="index.php" >Principal</A></li>
-					
-				<li><A href="registro.php" >Registro</A></li>
-
-				<li><A href="cargar.html" >Administraci&oacute;n</A></li>
-				<li><A href="contactenos.html" >Contacto</A></li>
-			</ul>
-		</nav>
-		<section id="seccion">
-			<h1>Cargar Articulos</h1>
-				<article id="registro">
-					<p><label>Producto:&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="text" name="producto" class="cajas" />  </p>
-					<p><label>Descripci&oacuten: </label> <input class="textbox" type="text" name="seccion" class="cajas" />  </p>
-					
-					<p><label>Imagen:&nbsp;&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="text" name="ruta" class="cajas" />  </p>
-					<p><label>Contacto:&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="text" name="contacto" class="cajas" />  </p>
-					<p><label>Valor:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="text" name="valor" class="cajas" />  </p>
-					<button type="submit" class="btn">Cargar Articulo</button>
-				</article>
-		</section>
-		<aside id="columna">
-			<blockquote><A href="calificaciones.php" ><label>Calificaciones</label></A></blockquote>
-			<blockquote><A href="estados.php" ><label>Estados</label></A></blockquote>
-			<blockquote><A href="registro.php" ><label>Usuarios</label></A></blockquote>
-			<blockquote><A href="cargar.php" ><label>Articulos</label></A></blockquote>
-
-		</aside>		
-
-		<footer id="pie">
-			<small>Derechos Reservados &copy; 2014 </small>
-			<address>
-				<a href=âhttp://www.loquesea.comâ>Carlos Campos & Jose Dussan</a>
-			</address>
-		</footer>
+	<div class="container">
+		<div class="col-md-12">
+			<header id="cabecera">
+				Loquesea.com		
+			</header>
+		</div>	
 	</div>
+    <div class="container">
+        <div class="collapse navbar-collapse navbar-ex1-collapse" >
+            <ul class="nav navbar-nav" >
+                <li><a href="indexlog.html">Principal</a>
+                </li>
+                <li><a href="cargar.html">Administraci&oacute;n</a>
+                </li>
+                <li><a href="contactenos.html">Contacto</a>
+                </li>
+            </ul>
+        </div>
+	</div>
+    <div class="container">
+    	<div class="col-md-9">
+            <h1>Cargar Articulos</h1>
+            <article id="registro">
+                <form action="upload.php" method="post" enctype="multipart/form-data"> 
+                    <p><label>Producto:&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="text" name="nombre" class="cajas" />  </p>
+                    <p><label>Descripci&oacuten: </label> <input class="textbox" type="text" name="descripcion" class="cajas" />  </p>
+                    <p><label>Contacto:&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="text" name="contacto" class="cajas" />  </p>
+                    <p><label>Valor:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="text" name="valor" class="cajas" />  </p>
+                    <p><label>Imagen:&nbsp;&nbsp;&nbsp;&nbsp;</label> <input type="file" name="imagen" />  </p>
+                    <button type="submit" class="btn" name="action" value="upload">Cargar Articulo</button>
+                </form> 
+            </article>
+        </div>
+    	<div class="col-md-3">
+	        <div class="list-group" >
+            	<a href="calificaciones.html" class="list-group-item">Calificaciones</a>
+            	<a href="estados.html" class="list-group-item">Estados</a>
+            	<a href="registro.html" class="list-group-item">Usuarios</a>
+            	<a href="cargar.html" class="list-group-item">Articulos</a>
+        	</div>
+    	</div>
+    </div>
+
+    <div class="container">
+        <hr>
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Carlos Campos & Felipe Ruiz </a>
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="js/bootstrap.js"></script> 
 </body>
 </html>
