registro html de loquesea.com

--- a/registro.html
+++ b/registro.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
-
-	<meta charset="utf-8"/>
-	<title>Loquesea.com</title>
-	<link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Loquesea.com</title>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
 <body>
-	<div id="agrupar">
-		<header id="cabecera">
-			Loquesea.com		
-		</header>
-		<nav id="menu">
-			<ul>
-
-				<li><A href="index.html" >Principal</A></li>
-					
-				<li><A href="registro.html" >Registro</A></li>
-
-				<li><A href="cargar.html" >Administraci&oacute;n</A></li>
-				<li><A href="contactenos.html" >Contacto</A></li>
-			</ul>
-		</nav>
-		<section id="seccion">
-			<h1>Registro</h1>
-				<article id="registro">
-					<p><label>Nombres:&nbsp;&nbsp;</label> <input type="text" name="nombres" class="cajas" />  </p>
-					<p><label>Apellidos:&nbsp;</label> <input type="text" name="apellidos" class="cajas" />  </p>
-					<p><label>E-mail:&nbsp;&nbsp;&nbsp;&nbsp;</label> <input type="email" name="email" class="cajas" />  </p>
-					<p><label>Usuario:&nbsp;&nbsp;&nbsp;</label> <input type="text" name="usuario" class="cajas" />  </p>
-					<p><label>Contrase&ntilde;a:</label> <input type="password" name="contrasena" class="cajas"/> </p>
-					<button type="submit" class="btn">Crear Cuenta</button>
-				</article>
-		</section>
-		<aside id="columna">
-			<blockquote>Mensaje n&uacute;mero uno</blockquote>
-			<blockquote>Mensaje n&uacute;mero dos</blockquote>
-		</aside>		
-
-		<footer id="pie">
-			<small>Derechos Reservados &copy; 2014 </small>
-			<address>
-				<a href=âhttp://www.loquesea.comâ>Carlos Campos & Jose Dussan</a>
-			</address>
-		</footer>
+	<div class="container">
+		<div class="col-md-12">
+			<header id="cabecera">
+				Loquesea.com		
+			</header>
+		</div>	
 	</div>
+    <div class="container">
+        <div class="collapse navbar-collapse navbar-ex1-collapse" >
+            <ul class="nav navbar-nav" >
+                <li><a href="indexlog.html">Principal</a>
+                </li>
+                <li><a href="cargar.html">Administraci&oacute;n</a>
+                </li>
+                <li><a href="contactenos.html">Contacto</a>
+                </li>
+            </ul>
+        </div>
+	</div>
+    <div class="container">
+    	<div class="col-md-9">
+            <h1>Registrar Usuarios</h1>
+            <article id="registro">
+               <form method="POST" action="registra.php">  
+                    <p><label>Nombres:&nbsp;&nbsp;</label> <input class="textbox" type="text" name="nombres" class="cajas" />  </p>
+                    <p><label>Apellidos:&nbsp;</label> <input class="textbox" type="text" name="apellidos" class="cajas" />  </p>
+                    <p><label>E-mail:&nbsp;&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="email" name="email" class="cajas" />  </p>
+                    <p><label>Usuario:&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="text" name="usuario" class="cajas" />  </p>
+                    <p><label>Contrase&ntilde;a:</label> <input class="textbox" type="password" name="contra" class="cajas"/> </p>
+                <button type="submit" class="btn">Crear Cuenta</button>
+                </form>  
+            </article>
+
+    	</div>
+    	<div class="col-md-3">
+	        <div class="list-group" >
+            	<a href="calificaciones.html" class="list-group-item">Calificaciones</a>
+            	<a href="estados.html" class="list-group-item">Estados</a>
+            	<a href="registro.html" class="list-group-item">Usuarios</a>
+            	<a href="cargar.html" class="list-group-item">Articulos</a>
+        	</div>
+    	</div>
+    </div>
+
+    <div class="container">
+        <hr>
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Carlos Campos & Felipe Ruiz </a>
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
