--- a/estados.html
+++ b/estados.html
@@ -33,8 +33,8 @@
             <h1>Estados</h1>
             <article id="registro">
                <form method="POST" action="registraestados.php">  
-                    <p><label>Codigo:&nbsp;</label> <input class="textbox" type="text" name="codiesta" class="cajas" />  </p>
-                    <p><label>Estado:&nbsp;</label> <input class="textbox" type="text" name="estado" class="cajas" />  </p>
+                    <p><label>Codigo:&nbsp;</label> <input type="text" name="codiesta" class="form-control" placeholder="Codigo" />  </p>
+                    <p><label>Estado:&nbsp;</label> <input type="text" name="estado" class="form-control" placeholder="Estado" />  </p>
                 <button type="submit" class="btn">Crear Estado</button>
                 </form>  
             </article>
@@ -60,5 +60,21 @@
             </div>
         </footer>
     </div>
+   <div class="container">
+    <div class="row">
+    <div class="col-lg-12">  
+    <form class="form-inline">
+    <div class="form-group">
+        <label>Primer Nombre</label>
+        <input type="text" class="form-control" placeholder="First Name">
+        </div>
+    <div class="form-group">
+        <label>Last Name</label>
+        <input type="text" class="form-control" placeholder="Last Name">
+    </div>
+    </form>
+           </div>
+            </div>
+         </div>
 </body>
 </html>
