--- a/estados.html
+++ b/estados.html
@@ -54,27 +54,11 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Carlos Campos & Felipe Ruiz </a>
+                    <p>Copyright &copy; Carlos Campos & Felipe Ruiz
                     </p>
                 </div>
             </div>
         </footer>
     </div>
-   <div class="container">
-    <div class="row">
-    <div class="col-lg-12">  
-    <form class="form-inline">
-    <div class="form-group">
-        <label>Primer Nombre</label>
-        <input type="text" class="form-control" placeholder="First Name">
-        </div>
-    <div class="form-group">
-        <label>Last Name</label>
-        <input type="text" class="form-control" placeholder="Last Name">
-    </div>
-    </form>
-           </div>
-            </div>
-         </div>
 </body>
 </html>
