--- a/contactenos.html
+++ b/contactenos.html
@@ -33,15 +33,29 @@
     	<div class="col-md-9">
             <h1>Contactenos</h1>
             <article id="registro">
-            <form method="POST" action="registracontacto.php"> 	
-                <p><label>Asunto:&nbsp;&nbsp;</label> <input class="textbox" type="text" name="asunto" class="cajas" />  </p>
-                    <p><label>Nombre:&nbsp;</label> <input class="textbox" type="text" name="nombre" class="cajas" />  </p>
-                    <p><label>E-mail:&nbsp;&nbsp;&nbsp;</label> <input class="textbox" type="email" name="email" class="cajas" />  </p>
-                    <p><label>Telefono:&nbsp;</label> <input class="textbox" type="tel" name="telefono" class="cajas" />  </p>
-                    <p><label>Detalle:&nbsp&nbsp&nbsp</label> <input class="textbox" type="text" name="detalle" class="cajas"/> </p>
-                    <button type="submit" class="btn">Enviar</button>
+            <form role="form">
+              <div class="form-group">
+                <label class="control-label" for="asunto">Asunto</label>
+                <input type="text" class="form-control" id="asunto">
+              </div>
+              <div class="form-group">
+                <label class="control-label" for="nombre">Nombre</label>
+                <input type="text" class="form-control" id="nombre">
+              </div>
+              <div class="form-group">
+                <label class="control-label" for="email">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="">
+              </div>
+              <div class="form-group">
+                <label class="control-label" for="telefono">Telefono</label>
+                <input type="text" class="form-control" id="telefono">
+              </div>
+              <div class="form-group">
+                <label class="control-label" for="detalle">Detalle</label>
+                <input type="text" class="form-control" id="detalle">
+              </div>
+              <button type="submit" class="btn btn-primary btn-lg active">Enviar</button>
             </form>
-            </article>
     	</div>
     	<div class="col-md-3">
 	        <div class="list-group" >
